--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
 	"name": "gulp-hub",
 	"description": "A gulp plugin to run tasks from multiple gulpfiles",
-	"version": "0.8.0",
+	"version": "0.8.0+theatlantic",
+  "private": "true",
 	"homepage": "https://github.com/frankwallis/gulp-hub",
 	"author": {
 		"name": "Frank Wallis",
